# smart-financial-assistant

./: .env.example  .gitignore  LICENSE  README.md  chainlit_app.py  main.py  pyproject.toml
knowledge_base/: balance_general.md  estado_resultados.md  flujo_caja.md  impuestos_colombia.md  interpretacion_por_cuenta.md  naturaleza_cuentas.md  plan_cuentas_basico.md  reglas_contables_agente.md
smart_financial_assistant/: __init__.py  agent.py  assistant.py  config.py  models.py  rag.py  siigo_client.py  tools.py
