[project]
name = "smart-financial-assistant"
version = "0.1.0"
description = "Asistente financiero inteligente"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"chainlit>=2.11.1",
	"langchain>=1.2.15",
	"langchain-core>=1.3.0",
	"langchain-openai>=1.2.0",
	"langchain-qdrant>=1.1.0",
	"langchain-huggingface>=1.2.2",
	"langchain-text-splitters>=1.1.2",
	"openpyxl>=3.1.5",
	"qdrant-client>=1.17.1",
	"pydantic>=2.13.3",
	"python-dotenv>=1.2.2",
	"requests>=2.33.1",
	"sentence-transformers>=5.4.1",
]

[project.scripts]
smart-financial-assistant = "main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
